<resources>
    <string name="app_name">Firefighter</string>
    <string name="sms_config">Настройки СМС</string>
    <string name="port">Порт</string>
    <string name="MMSC">MMSC</string>
    <string name="SendOption">Настройка Отправки</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phone_number">Номер телефона</string>
    <string name="proxy">Прокси</string>
    <string name="Everybody_option">Общие настройки</string>
    <string name="CV_config">Настройки ComputerVision</string>
    <string name="config_saved">Настройки сохранены</string>
    <string name="deviation">Отклонение</string>
    <string name="photoDir">Директория для фото</string>
    <string name="allOption">Все настройки</string>
    <string name="Stop">Стоп</string>
    <string name="Save">Сохранить</string>
    <string name="Start">Старт</string>
    <string name="Statistic">Статистика</string>
    <string name="smsc">SMSC</string>
    <string name="sms">СМС</string>
    <string name="MMS">ММС</string>
    <string name="droneID">Id дрона</string>
    <string name="idlient">ID клиента</string>
    <string name="save">Сохранить насройки</string>
    <string name="Bach_on_mini_map">Вернуться на карту</string>
    <string name="googlemap">Метка на GoogleMap</string>
    <string name="MusicOn">Вкл.оповещение звуком</string>
    <string name="base_url">Base URL</string>
    <string name="photo">Пок.присланные с сервера фото</string>
    <string name="View_photo">Показать фото</string>
</resources>
