<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF00"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfigActivity">




    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                <CheckBox
                    android:id="@+id/flagBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/smsBox"
                    android:hint="Такой косяк"
                    android:text="@string/googlemap" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/MusicOn"
                    android:id="@+id/checkMusic"
                    android:layout_gravity="right"/>
            </LinearLayout>
            <CheckBox
                android:id="@+id/photoBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/smsBox"
                android:text="@string/photo" />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/clientId"
                android:gravity="center_horizontal"
                android:hint="@string/idlient" />


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/baseURL"
                android:hint="@string/base_url" />
        </LinearLayout>
    </ScrollView>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/save"
        android:onClick="goSave"
        android:id="@+id/save"
        android:layout_gravity="bottom" />

    <ImageButton
        android:layout_width="wrap_content"
        android:src="@drawable/log"
        android:layout_height="wrap_content"
        android:id="@+id/option"
        android:onClick="optionActivity"
        android:layout_gravity="bottom" />
</LinearLayout>

</LinearLayout>
